# kaya

./: .gitattributes  .gitignore  .lintstagedrc  .markdownlint.json  .markdownlintignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  package.json  playwright.config.ts  tsconfig.json
.changeset/: config.json
.github/: CLA.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  cla.yml  codeql.yml  labeler.yml  lock.yml  nightly.yml  pr-title.yml  release.yml  welcome.yml
.husky/: pre-commit
apps/desktop/: index.html  package.json  rsbuild.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  Updater.css  Updater.tsx  analytics.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: commands.rs  main.rs  onnx_engine.rs  window_state.rs
apps/web/: index.html  package.json  rsbuild.config.ts  tsconfig.json
apps/web/src/: App.tsx  LandingPage.css  LandingPage.tsx  main.tsx
docs/: ABOUT.md  AI_ANALYSIS_FORMAT.md  ASSET_MANAGEMENT.md  BRAND_GUIDE.md  DEVELOPER_GUIDE.md  I18N.md  MOBILE_RESPONSIVE.md  PERFORMANCE.md  PROJECT_STATE.md  README.md  RELEASE_PROCESS.md  UPDATER_SETUP.md  USER_GUIDE.md
e2e/: app.e2e.ts  board.e2e.ts  comments.e2e.ts  edit-tools.e2e.ts  gameplay.e2e.ts  navigation.e2e.ts  responsive.e2e.ts  smoke.e2e.ts
next/: coi-serviceworker.js  coi-serviceworker.js.LICENSE.txt  index.html  manifest.json  sw.js  version.json
next/static/assets/: ort.all.bundle.min.0e868baf.mjs
next/static/css/: index.95cb4c35.css  index.a7e2d3eb.css  index.dee4e39f.css
next/static/js/: index.2e1b714c.js  index.92876d16.js  index.92876d16.js.LICENSE.txt  index.a672256d.js
next/static/js/async/: 0.a4a89d81.js  0.a4a89d81.js.map  128.1909ab33.js  128.1909ab33.js.map  138.e1e226bd.js  138.e1e226bd.js.map  (+18 more)
next/static/wasm/: da953978.module.wasm  dddb3ab8.module.wasm
next/wasm/: ort-wasm-simd-threaded.asyncify.mjs  ort-wasm-simd-threaded.jsep.mjs  ort.all.bundle.min.mjs  ort.all.bundle.min.mjs.LICENSE.txt  ort.all.min.mjs  ort.all.mjs  ort.bundle.min.mjs  ort.min.mjs  ort.mjs  ort.node.min.mjs  ort.node.min.mjs.LICENSE.txt  ort.wasm.bundle.min.mjs  ort.wasm.min.mjs  ort.wasm.mjs  ort.webgl.min.mjs  ort.webgl.mjs  ort.webgl.mjs.LICENSE.txt  ort.webgpu.bundle.min.mjs  ort.webgpu.min.mjs  ort.webgpu.mjs
public/: robots.txt  sitemap.xml
scripts/: copy-assets.ts  generate-icons.ts  generate-pwa-assets.ts  generate-updater-json.ts  generate-version-info.ts  set-version.ts
